# backup

./: .gitignore  config.py  pyproject.toml  requirements.txt
app/: __init__.py  models.py
app/entities/: backup.py
app/forms/: backup_form.py  frequency_form.py
app/models/: relatorio_model.py
app/repositories/: relatory_repository.py
app/repositorios/: relatorio_repositorio.py
app/services/: backup_service.py  frequency_service.py  relatorio_service.py  relatory_service.py
app/static/css/: sidebars.css  styles.css
app/templates/: base.html  index.html  settings.html
app/templates/_frames/: _footer.html  _topbar.html
app/templates/backup/: detail_backup.html  form_backup.html  get_backups.html
app/templates/frames/: _perfil.html  _sidebar.html  _topbar.html
app/templates/frequency/: detail_frequency.html  form_frequency.html  get_frequencies.html
app/templates/relatorio/: expandir.html  semana.html  sincronizacao.html
app/templates/relatory/: detail_relatory.html  get_relatories.html  get_relatories_dayly.html
app/views/: backup_view.py  frequency_view.py  relatorio_view.py  relatory_view.py  settings_view.py
