[tool.poetry]
name = "backup"
version = "0.1.0"
description = ""
authors = ["Fernando Antunes <f.antunes84@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.3"
flask = "^2.2.3"
flask-sqlalchemy = "^3.0.3"
greenlet = "^2.0.2"
itsdangerous = "^2.1.2"
jinja2 = "^3.1.2"
markupsafe = "^2.1.2"
sqlalchemy = "^2.0.4"
text-unidecode = "^1.3"
unidecode = "^1.3.6"
werkzeug = "^2.2.3"
python-dotenv = "^1.0.0"
psycopg2 = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
